--- a/index.html
+++ b/index.html
@@ -5,12 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="keyword" content="eco site save the planet ecology" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Fira+Sans+Condensed:400,500,700,900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./style/main.css" />
     <title>EcoSite</title>
   </head>
   <body>
     <header>
-      <h1>Save the planet</h1>
+      <img
+        src="./img/icon.png"
+        alt="logo"
+        class="logo"
+        width="35"
+        height="35"
+      />
+      <nav class="nav">
+        <ul class="nav-list">
+          <li class="nav-list__items"><a href="#home">home</a></li>
+          <li class="nav-list__items"><a href="#aboutUs">about us</a></li>
+          <li class="nav-list__items"><a href="#products">products</a></li>
+          <li class="nav-list__items"><a href="#where">where we are</a></li>
+          <li class="nav-list__items"><a href="#brands">brands</a></li>
+          <li class="nav-list__items"><a href="#contactUs">contact us</a></li>
+        </ul>
+      </nav>
     </header>
+    <main>
+      <section id="main">
+        <h1 class="section-title">Green planet</h1>
+        <h3 class="section__subtitle">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
+          itaque minima enim iusto, aut ab?
+        </h3>
+        <button class="secition__btn">Learn More</button>
+        <div class="section-img">
+          <img
+            src="./img/mainImg.jpg"
+            alt="main img"
+            srcset=""
+            width="450"
+            height="350"
+          />
+        </div>
+      </section>
+    </main>
   </body>
 </html>
