--- a/index.html
+++ b/index.html
@@ -33,13 +33,17 @@
       </nav>
     </header>
     <main>
+      <!-- Main -->
+
       <section id="main">
-        <h1 class="section-title">Green planet</h1>
-        <h3 class="section__subtitle">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
-          itaque minima enim iusto, aut ab?
-        </h3>
-        <button class="secition__btn">Learn More</button>
+        <div class="main-section">
+          <h1 class="section-title">Green planet</h1>
+          <h3 class="section__subtitle">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
+            itaque minima enim iusto, aut ab?
+          </h3>
+          <button class="section__btn">Learn More</button>
+        </div>
         <div class="section-img">
           <img
             src="./img/mainImg.jpg"
