--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       />
       <nav class="nav">
         <ul class="nav-list">
-          <li class="nav-list__items"><a href="#home">home</a></li>
+          <li class="nav-list__items"><a href="#main">home</a></li>
           <li class="nav-list__items"><a href="#aboutUs">about us</a></li>
           <li class="nav-list__items"><a href="#products">products</a></li>
           <li class="nav-list__items"><a href="#where">where we are</a></li>
