--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <main>
       <!-- Main -->
 
+      <!--  Section Main -->
       <section id="main">
         <div class="main-section">
           <h1 class="section-title">Green planet</h1>
@@ -45,14 +46,50 @@
           <button class="section__btn">Learn More</button>
         </div>
         <div class="section-img">
-          <img
-            src="./img/mainImg.jpg"
-            alt="main img"
-            srcset=""
-            width="450"
-            height="350"
-          />
+          <img src="./img/mainImg.jpg" alt="main img" srcset="" />
         </div>
+      </section>
+
+      <!--  Section About Us -->
+
+      <section id="aboutUs">
+        <h2 class="title">About Us</h2>
+        <br />
+        <h3 class="section__subtitle">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde minima
+          soluta eum accusantium quisquam vero tenetur accusamus temporibus
+          labore omnis natus, nam dicta deserunt magnam vitae. Alias, qui. Esse,
+          vitae.
+        </h3>
+      </section>
+
+      <!--  Section Product -->
+
+      <section id="products">
+        <h2 class="product-title">Our Product</h2>
+        <ul class="product-items">
+          <li class="product-item">
+            <h3 class="product-item__title">Eco fertilizer</h3>
+            <img src="./img/product.jpg" alt="product" class="product-img" />
+            <p class="product-item_description">
+              Lorem ipsum dolor sit amet consectetur.
+            </p>
+          </li>
+          <li class="product-item">
+            <h3 class="product-item__title">Eco bag</h3>
+            <img src="./img/product1.jpg" alt="product" class="product-img" />
+            <p class="product-item_description">
+              Lorem ipsum dolor sit amet consectetur.
+            </p>
+          </li>
+          <li class="product-item">
+            <h3 class="product-item__title">Eco paper</h3>
+            <img src="./img/product2.jpg" alt="product" class="product-img" />
+            <p class="product-item_description">
+              Lorem ipsum dolor sit amet consectetur.
+            </p>
+          </li>
+        </ul>
       </section>
     </main>
   </body>
