--- a/index.html
+++ b/index.html
@@ -91,6 +91,28 @@
           </li>
         </ul>
       </section>
+
+      <!--  Section Where -->
+
+      <section id="where">
+        <h2 class="where-title">Where are we</h2>
+        <hr class="border" />
+        <div class="where">
+          <div class="where__info">
+            <h3 class="where-description__city">
+              City Valencia: Street Klisa
+            </h3>
+            <p class="where-description__phone">Phone : 021/63336-16565</p>
+            <p class="where-description__mail">
+              <strong>Email</strong> : bojan.freelance.jobs@email.com
+            </p>
+          </div>
+          <div class="where-map">
+            <h3 class="where-map__title">City map</h3>
+            <img src="./img/cityMap.jpg" alt="city Map" />
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
