--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
           <li class="nav-list__items"><a href="#main">home</a></li>
           <li class="nav-list__items"><a href="#aboutUs">about us</a></li>
           <li class="nav-list__items"><a href="#products">products</a></li>
-          <li class="nav-list__items"><a href="#where">where we are</a></li>
           <li class="nav-list__items"><a href="#brands">brands</a></li>
+          <li class="nav-list__items"><a href="#where">where we are</a></li>
           <li class="nav-list__items"><a href="#contactUs">contact us</a></li>
         </ul>
       </nav>
@@ -92,6 +92,31 @@
         </ul>
       </section>
 
+      <!--  Section Brands -->
+
+      <section id="brands">
+        <h2 class="brands-title">Brands with us</h2>
+        <hr class="border" />
+        <div class="brands-withUs">
+          <div class="brand">
+            <img src="./img/brand1.jpg" alt="brand 1" class="brand-img" />
+            <p>Lorem, ipsum dolor.</p>
+          </div>
+          <div class="brand">
+            <img src="./img/brand2.jpg" alt="brand 1" class="brand-img" />
+            <p>Lorem, ipsum dolor.</p>
+          </div>
+          <div class="brand">
+            <img src="./img/brand3.png" alt="brand 1" class="brand-img" />
+            <p>Lorem, ipsum dolor.</p>
+          </div>
+          <div class="brand">
+            <img src="./img/brand4.jpg" alt="brand 1" class="brand-img" />
+            <p>Lorem, ipsum dolor.</p>
+          </div>
+        </div>
+      </section>
+
       <!--  Section Where -->
 
       <section id="where">
@@ -113,6 +138,27 @@
           </div>
         </div>
       </section>
+
+      <footer id="contactUs">
+        <ul class="contact">
+          <li class="contact-links">
+            <a href="#main" class="contact__link">home</a>
+          </li>
+          <li class="contact-links">
+            <a href="#aboutUs" class="contact__link">about us</a>
+          </li>
+          <li class="contact-links">
+            <a href="#products" class="contact__link">products</a>
+          </li>
+          <li class="contact-links">
+            <a href="#brands" class="contact__link">brands</a>
+          </li>
+          <li class="contact-links">
+            <a href="#where" class="contact__link">where we are</a>
+          </li>
+        </ul>
+        <p class="design">design by &copy Bojan Mijatovic 2020</p>
+      </footer>
     </main>
   </body>
 </html>
